examples/test/testpolicy13969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13969
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key46: value43
      key24: value22
      key1: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value20
          key20: value40
          key41: value35
